--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "cra-template": "1.2.0",
+    "framer-motion": "^12.4.1",
+    "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
     "react-vitals": "^1.2.0"
   },
   "scripts": {
