--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI=mongodb+srv://dheeru:Praja%40123@libraraymanagement.8sm6a.mongodb.net/mail
-EMAIL_USER = prajapatidheerendra45@gmail.com
-EMAIL_PASS = qqyb pvvg hhbq osmb
+MONGO_URI=mongodb+srv://vrssolution12:VRS%40123@vrsmanpowersolutions.mes6x.mongodb.net/vrs_Website
+EMAIL_USER = vrs.solution12@gmail.com
+EMAIL_PASS = hlyk hyqm zhvd kzie
